--- a/css/style.css
+++ b/css/style.css
@@ -313,3 +313,80 @@ h6,
     background: linear-gradient(rgba(28, 30, 50, .9), rgba(28, 30, 50, .9)), url(../img/bg-banner.jpg);
     background-attachment: fixed;
 }
+
+
+
+/**
+Agrego
+    */
+
+        #editar {
+            width: 80%;
+            margin: 0 auto;
+            padding: 30px;
+        }
+    
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            font-size: 13px;
+    
+        }
+    
+        th,
+        td {
+            border: 1px solid #dddddd;
+            text-align: left;
+            padding: 8px;
+        }
+    
+        th {
+            background-color: #f2f2f2;
+        }
+    
+        tr:nth-child(even) {
+            background-color: #f9f9f9;
+        }
+    
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+    
+        header {
+            background-color: #333;
+            color: #fff;
+            padding: 10px 0;
+            text-align: center;
+        }
+    
+        main {
+            padding: 20px;
+        }
+    
+        footer {
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 10px 0;
+            position: fixed;
+            width: 100%;
+            bottom: 0;
+    
+        }
+    
+        #boton {
+            display: inline-block;
+            padding: 10px 20px;
+            font-size: 16px;
+            color: white;
+            background-color: #1d63f0;
+            text-decoration: none;
+            border-radius: 5px;
+        }
+    
+        #boton:hover {
+            background-color: #2c2626;
+        }
